fix: 	- DESACTIVADA <HomeSection> porque el video agrega una bottom scrollbar

--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -58,7 +58,7 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  border: 1.5px solid #ffffff;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   max-width: 800px;
@@ -70,6 +70,10 @@
 .card:active {
   color: var(--yellow);
   border-color: var(--yellow);
+  box-shadow: 0px 0px 8px rgba(255,255,0,0.5); /* Añadir sombra tenue de color --yellow */
+  transform: scale(1.01) ;
+  transition: transform 0.s ease-in-out;
+
 }
 
 .card h2 {
@@ -89,7 +93,7 @@
     flex-direction: column;
   }
 }
-
+/*
 @media (prefers-color-scheme: dark) {
   .card,
   .footer {
@@ -101,6 +105,6 @@
   .logo img {
     filter: invert(1);
   }
-}
+}*/
 
 
